{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "ae82e62f-8d4d-47f3-9f8f-65c2a74fccd9",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "16de49e7-cf8e-4602-9f88-8d444b4766ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "zoom",
                    "type": "Value",
                    "id": "084fa1a4-2179-4198-b5f3-5bcaf55d5efb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20a98237-1676-4b59-a2ef-c8d8254e35a9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0ad7b04-71a1-4dcf-9e62-af7810bd95d0",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}